# tvkit

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_AUDIT.md  CONTRIBUTING.md  OHLCV_MODELS_SUMMARY.md  PYTHON_VERSION_UPDATE_SUMMARY.md  README.md  SECURITY.md  demo_ohlcv_models.py  main.py  pyproject.toml  requirements.txt  test_realtime_demo.py  tvkit.code-workspace  tvkit_exchange_overrides.example.yaml
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/instructions/: core-architectrual-principles.instructions.md  documentation-standards.instructions.md
docs/: POLARS_INTEGRATION.md  README.md  data-sources.md  data_exporter_methods.md  faq.md  index.md  limitations.md  methods_overview.md  ohlcv_methods.md  quick-start.md  realtime_streaming.md  roadmap.md  scanner_service_methods.md  why-tvkit.md
docs/api/: utils.md
examples/: authenticated_ohlcv_example.py  batch_sp500_historical.py  export_demo.py  historical_and_realtime_data.ipynb  historical_and_realtime_data.py  macro_regime_detection.py  multi_market_scanner_example.ipynb  multi_market_scanner_example.py  ohlcv_dividend_adjusted.py  ohlcv_historical.py  ohlcv_stream.py  polars_financial_analysis.py  quick_tutorial.py  realtime_streaming_example.py  sample.ipynb  scanner_sp500.py  symbol_normalization_example.py  thailand_scanner_example.py  validation_ohlcv.py  validation_ohlcv_example.py  verify_installation.py
export/: btc_1h_data.csv  btc_1h_data.json  btc_1h_data.metadata.txt  ohlc_btcusdt_1m_20250725-134230.csv  ohlc_btcusdt_1m_20250725-134230.json  polars_demo.csv  polars_demo.json  polars_demo.parquet
scripts/: README.md  check-docs.sh  check_docs.py  export_tv_cookies.py  publish.sh  quick_network_test.py  validate_examples.py
tests/: test_adjustment_enum.py  test_authentication.py  test_batch_downloader.py  test_connection_retry.py  test_connection_service.py  test_export_module.py  test_export_validation.py  test_futures_range_degradation.py  test_historical_ohlcv.py  test_indicator_service.py  test_interval_validation.py  test_ohlcv_models.py  test_ohlcv_range_filter.py  test_ohlcv_reconnect.py  test_ohlcv_symbol_integration.py  test_range_segmentation.py  test_realtime_models.py  test_realtime_streamer.py  test_realtime_utils.py  test_realtime_utils.py.disabled  test_retry_backoff.py  test_segmented_fetch.py  test_symbols_config.py  test_symbols_normalizer.py  test_timeframe_validation.py  test_timezone_utils.py  test_utils.py  test_validation_checks.py  test_validation_composite.py
tvkit/: __init__.py  __main__.py  cli.py  core.py  helpers.py  quickstart.py
(+135 files in other folders)
