[project]
name = "tvkit"
version = "0.4.0"
description = "tvkit is a Python library that fetches real-time stock data from TradingView, including price, market cap, P/E ratio, ROE, and more for stocks from multiple countries. Easily access and analyze financial metrics for global markets."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "lumduan", email = "b@candythink.com" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["tradingview", "stock", "trading", "finance", "api", "market-data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "pydantic>=2.0.0",
    "websockets>=11.0.0",
    "httpx>=0.24.0",
    "polars>=0.19.0",
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "rich>=14.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.12.12",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=4.0.0",
    "build>=1.3.0",
    "twine>=6.2.0",
    "mypy>=1.17.0",
]

[project.urls]
Homepage = "https://github.com/lumduan/tvkit"
Repository = "https://github.com/lumduan/tvkit"
Documentation = "https://github.com/lumduan/tvkit#readme"
"Bug Reports" = "https://github.com/lumduan/tvkit/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tvkit*"]
exclude = ["debug*", "tests*", "scripts*", "docs*"]

[tool.setuptools.package-data]
tvkit = ["py.typed"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    "venv/",
    ".venv/",
    "build/",
    "dist/",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "__pycache__",
    "*.ipynb",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort — import ordering
    "B",   # flake8-bugbear — bug-prone patterns
    "UP",  # pyupgrade — modern Python syntax
]
ignore = [
    "E501",  # line too long — handled by formatter
    "W293",  # whitespace on blank line — handled by ruff format
]

[tool.ruff.lint.isort]
known-first-party = ["tvkit"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
